# forex-signal

./: .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  sync.sh  test_cache.py  test_cache_detailed.py
src/forex_signal_agent/: alpha_vantage_client.py  analyzer.py  config.py  config_validation.py  data_manager.py  exceptions.py  finnhub_client.py  health.py  indicators.py  main.py  sqlite_cache.py  telegram_notifier.py  yahoo_finance_client.py
src/forex_signal_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
